--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-
+spring.security.oauth2.client.registration.google.client-id=761249979923-cgeqvgqe6a2girjcliglafgbo484u642.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=openid,email,profile
