Email Sender + Confirmation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,12 @@ spring.thymeleaf.suffix=.html
 spring.security.oauth2.client.registration.google.client-id=761249979923-cgeqvgqe6a2girjcliglafgbo484u642.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=openid,email,profile
+
+###### Email Properties ######
+#smtp mail properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=vladkarpenko336@gmail.com
+spring.mail.password=wfpdzrpxhwitvjtz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
