--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,15 @@
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
             <version>2.4.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>regions</artifactId>
+            <version>2.20.149</version>
+        </dependency>
     </dependencies>
 
     <build>
