--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-spring.security.oauth2.client.registration.google.client-id=761249979923-cgeqvgqe6a2girjcliglafgbo484u642.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=761249979923-njgmpf0tdr5om7i42sjl3g08fro01ssr.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=openid,email,profile
+server.port=8080
+
 
 ###### Email Properties ######
 #smtp mail properties
